    notifications when upgrading over a particular version. This provides the
    notification when upgrading from Etch to Lenny, and when obsoleting a
    major version within unstable.
  * debian/supported-versions: Drop support for 8.2 in unstable, 8.3 is the
    version du jour.
  * debian/supported-versions: Drop Ubuntu 5.10, fix a typo in the versions
    for Ubuntu 6.06.

 -- Martin Pitt <mpitt@debian.org>  Wed, 16 Jan 2008 00:49:03 +0100

postgresql-common (82) unstable; urgency=low

  * debian/control: Fix 'commmon' typo. (Closes: #449532)
  * t/030_errors.t: Check that an /etc/postgresql/postgresql.conf leftover is
    not regarded as a cluster directory. This reproduces #450565.
  * PgCommon.pm, get_versions()/get_version_clusters(): Filter out '.' and
    '..' from readdir() output. (Closes: #450565)
  * pg_ctlcluster: Use "smart" mode shutdown by default, and add option
    -f/--force to use "fast" -> "immediate" -> kill -9 approach. (LP: #154012)
  * debian/init.d-functions: Use --force when stopping all clusters, since
    default smart mode can potentially block forever and thus fail to shut
    down a machine.
  * debian/README.Devel: Update for current bzr versions and hosting on
    code.launchpad.net.
  * Update Japanese debconf translations (Closes: #450902)

 -- Martin Pitt <mpitt@debian.org>  Sun, 30 Dec 2007 22:27:08 +0100

postgresql-common (81) unstable; urgency=low

  * debian/supported_versions: Welcome, Ubuntu Hardy (8.04)!
  * debian/postgresql-common.templates, debian/control: Language and grammar
    improvements, thanks a lot to Christian Perrier and the l10n teams!
    (Closes: #446457)
  * Update debconf translations, thanks to all translators!
    - French (Christian Perrier) (Closes: #446978)
    - Vietnamese (Clytie Siddall) (Closes: #447009)
    - Finnish (Esko Arajärvi) (Closes: #447045)
    - Italian (Luca Monducci) (Closes: #447052)
    - Galician (Jacobo Tarrio) (Closes: #447054)