@@ -14,8 +14,10 @@ postgresql-common (83) UNRELEASED; urgency=low
     version du jour.
   * debian/supported-versions: Drop Ubuntu 5.10, fix a typo in the versions
     for Ubuntu 6.06.
+  * t/090_multicluster.t: Test correct behaviour of pg_service.conf. (See
+    #439026)
 
- -- Martin Pitt <mpitt@debian.org>  Wed, 16 Jan 2008 00:49:03 +0100
+ -- Martin Pitt <mpitt@debian.org>  Sat, 19 Jan 2008 19:00:06 +0100
 
 postgresql-common (82) unstable; urgency=low
 
